tests/invalid/assign_tuple_unpack/main.py
def run_case() -> None:
    a, b = 1, 2

if __name__ == "__main__":
    run_case()
